# qr-mosaic

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
bot/: handlers.py  main.py
ios/: Package.swift
ios/Sources/QRMosaic/: MosaicBlender.swift  QRGenerator.swift
qr_mosaic/: __init__.py  cli.py  generator.py  logos.py  mosaic.py  svg.py
tests/: test_cli.py  test_generator.py  test_mosaic.py
